<resources>
    <string name="app_name">Reconocimiento de Texto</string>
    <string name="btnReconocer">Reconocer Texto</string>
    <string name="btnAcercaDe">Acerca De</string>
    <string name="btnSalir">Salir</string>

    <string name="ReconocerTexto">Reconocer Texto</string>
    <string name="ReconocerTXT">Texto reconocido: </string>
    <string name="TextoReconocidoEt"> -- </string>

    <string name="menu_abrir_galeria">Abrir Galeria</string>
    <string name="menu_abrir_camara">Abrir Camara</string>
    <string name="title_activity_main2">MainActivity2</string>

    <string name="DesarrolladorText">Desarrollado por: Moises Mazo</string>
    <string name="EmailText">Email: mazomoises@gmail.com</string>
    <string name="versionTxt">Version: 1.0</string>
    <string name="btnEntendido">Entendido</string>
</resources>