<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center">
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:lottie_fileName="info.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:layout_gravity="center"/>
    <TextView
        android:text="@string/DesarrolladorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/opensans_bold"
        android:layout_marginTop="10dp"/>
    <TextView
        android:text="@string/EmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/opensans_bold"
        android:layout_gravity="center"/>
    <TextView
        android:text="@string/versionTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/opensans_bold"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btnEntendido"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/btnEntendido"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/opensans_bold"
        android:layout_gravity="center"/>


</androidx.appcompat.widget.LinearLayoutCompat>