<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"

    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@color/black">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#673AB7" />

    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/ReconocerTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ReconocerTexto"
        app:layout_anchor="@+id/appBarLayout"
        android:fontFamily="@font/opensans_bold"
        app:layout_anchorGravity="bottom|center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imagen"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/imagen"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ReconocerTXT"
                android:textSize="11sp"
                android:fontFamily="@font/opensans_bold"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/TextoReconocidoEt"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_bold"
                android:hint="@string/TextoReconocidoEt"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>